--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "biopython>=1.86",
+    "pyyaml>=6.0.3",
+    "streamlit>=1.52.1",
+]
