feat: Update scoring weights and improve dashboard filters
- Replaced funding weights with company_intent and added new_hire_bonus in scoring_weights.yaml.
- Improved dashboard UI with side-by-side search and probability filters.
- Introduced dummy mode in the lead generation pipeline for testing without paid APIs.

--- a/src/config/scoring_weights.yaml
+++ b/src/config/scoring_weights.yaml
@@ -1,7 +1,6 @@
 role_fit: 30
 scientific_intent: 40
-funding:
-  series_a: 20
-  series_b: 20
+company_intent: 20
 location_hub: 10
 technographic: 15
+new_hire_bonus: 5
